Se agrego el read

--- a/logo.ui
+++ b/logo.ui
@@ -36,7 +36,7 @@
     </rect>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>1</number>
    </property>
    <widget class="QWidget" name="tab">
     <attribute name="title">
@@ -102,6 +102,9 @@
       </rect>
      </property>
      <property name="acceptDrops">
+      <bool>true</bool>
+     </property>
+     <property name="readOnly">
       <bool>true</bool>
      </property>
     </widget>
